sols/5/parse.output
Nonterminals useless in grammar

   funcdef


Terminals unused in grammar

   DEF
   COLON


Rules useless in grammar

   26 funcdef: DEF IDENT LPAR RPAR COLON CR


State 45 conflicts: 2 shift/reduce
State 46 conflicts: 2 shift/reduce
State 47 conflicts: 2 shift/reduce
State 48 conflicts: 2 shift/reduce
State 50 conflicts: 2 shift/reduce
State 53 conflicts: 2 shift/reduce


Grammar

    0 $accept: lines $end

    1 lines: lines expr CR
    2      | lines IDENT EQ expr CR
    3      | lines expr PLUS EQ expr
    4      | lines expr MINUS EQ expr
    5      | lines expr MULT EQ expr
    6      | lines expr DIV EQ expr
    7      | lines expr MOD EQ expr
    8      | lines expr DIV DIV EQ expr
    9      | lines CR
   10      | %empty

   11 expr: expr PLUS expr
   12     | expr MINUS expr
   13     | expr MULT expr
   14     | expr DIV expr
   15     | expr DIV DIV expr
   16     | expr MOD expr
   17     | expr MULT MULT expr
   18     | MINUS FLOAT
   19     | MINUS INT
   20     | PLUS FLOAT
   21     | PLUS INT
   22     | LPAR expr RPAR
   23     | INT
   24     | FLOAT
   25     | IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
CR (258) 1 2 9
EQ (259) 2 3 4 5 6 7 8
DEF (260)
COLON (261)
INT (262) 19 21 23
FLOAT (263) 18 20 24
IDENT (264) 2 25
PLUS (265) 3 11 20 21
MINUS (266) 4 12 18 19
MOD (267) 7 16
MULT (268) 5 13 17
DIV (269) 6 8 14 15
LPAR (270) 22
RPAR (271) 22


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
lines (18)
    on left: 1 2 3 4 5 6 7 8 9 10, on right: 0 1 2 3 4 5 6 7 8 9
expr (19)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25, on right:
    1 2 3 4 5 6 7 8 11 12 13 14 15 16 17 22


State 0

    0 $accept: . lines $end

    $default  reduce using rule 10 (lines)

    lines  go to state 1


State 1

    0 $accept: lines . $end
    1 lines: lines . expr CR
    2      | lines . IDENT EQ expr CR
    3      | lines . expr PLUS EQ expr
    4      | lines . expr MINUS EQ expr
    5      | lines . expr MULT EQ expr
    6      | lines . expr DIV EQ expr
    7      | lines . expr MOD EQ expr
    8      | lines . expr DIV DIV EQ expr
    9      | lines . CR

    $end   shift, and go to state 2
    CR     shift, and go to state 3
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 6
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 10


State 2

    0 $accept: lines $end .

    $default  accept


State 3

    9 lines: lines CR .

    $default  reduce using rule 9 (lines)


State 4

   23 expr: INT .

    $default  reduce using rule 23 (expr)


State 5

   24 expr: FLOAT .

    $default  reduce using rule 24 (expr)


State 6

    2 lines: lines IDENT . EQ expr CR
   25 expr: IDENT .

    EQ  shift, and go to state 11

    $default  reduce using rule 25 (expr)


State 7

   20 expr: PLUS . FLOAT
   21     | PLUS . INT

    INT    shift, and go to state 12
    FLOAT  shift, and go to state 13


State 8

   18 expr: MINUS . FLOAT
   19     | MINUS . INT

    INT    shift, and go to state 14
    FLOAT  shift, and go to state 15


State 9

   22 expr: LPAR . expr RPAR

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 17


State 10

    1 lines: lines expr . CR
    3      | lines expr . PLUS EQ expr
    4      | lines expr . MINUS EQ expr
    5      | lines expr . MULT EQ expr
    6      | lines expr . DIV EQ expr
    7      | lines expr . MOD EQ expr
    8      | lines expr . DIV DIV EQ expr
   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    CR     shift, and go to state 18
    PLUS   shift, and go to state 19
    MINUS  shift, and go to state 20
    MOD    shift, and go to state 21
    MULT   shift, and go to state 22
    DIV    shift, and go to state 23


State 11

    2 lines: lines IDENT EQ . expr CR

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 24


State 12

   21 expr: PLUS INT .

    $default  reduce using rule 21 (expr)


State 13

   20 expr: PLUS FLOAT .

    $default  reduce using rule 20 (expr)


State 14

   19 expr: MINUS INT .

    $default  reduce using rule 19 (expr)


State 15

   18 expr: MINUS FLOAT .

    $default  reduce using rule 18 (expr)


State 16

   25 expr: IDENT .

    $default  reduce using rule 25 (expr)


State 17

   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr
   22     | LPAR expr . RPAR

    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MOD    shift, and go to state 27
    MULT   shift, and go to state 28
    DIV    shift, and go to state 29
    RPAR   shift, and go to state 30


State 18

    1 lines: lines expr CR .

    $default  reduce using rule 1 (lines)


State 19

    3 lines: lines expr PLUS . EQ expr
   11 expr: expr PLUS . expr

    EQ     shift, and go to state 31
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 32


State 20

    4 lines: lines expr MINUS . EQ expr
   12 expr: expr MINUS . expr

    EQ     shift, and go to state 33
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 34


State 21

    7 lines: lines expr MOD . EQ expr
   16 expr: expr MOD . expr

    EQ     shift, and go to state 35
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 36


State 22

    5 lines: lines expr MULT . EQ expr
   13 expr: expr MULT . expr
   17     | expr MULT . MULT expr

    EQ     shift, and go to state 37
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    MULT   shift, and go to state 38
    LPAR   shift, and go to state 9

    expr  go to state 39


State 23

    6 lines: lines expr DIV . EQ expr
    8      | lines expr DIV . DIV EQ expr
   14 expr: expr DIV . expr
   15     | expr DIV . DIV expr

    EQ     shift, and go to state 40
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    DIV    shift, and go to state 41
    LPAR   shift, and go to state 9

    expr  go to state 42


State 24

    2 lines: lines IDENT EQ expr . CR
   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    CR     shift, and go to state 43
    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MOD    shift, and go to state 27
    MULT   shift, and go to state 28
    DIV    shift, and go to state 29


State 25

   11 expr: expr PLUS . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 32


State 26

   12 expr: expr MINUS . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 34


State 27

   16 expr: expr MOD . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 36


State 28

   13 expr: expr MULT . expr
   17     | expr MULT . MULT expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    MULT   shift, and go to state 38
    LPAR   shift, and go to state 9

    expr  go to state 39


State 29

   14 expr: expr DIV . expr
   15     | expr DIV . DIV expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    DIV    shift, and go to state 44
    LPAR   shift, and go to state 9

    expr  go to state 42


State 30

   22 expr: LPAR expr RPAR .

    $default  reduce using rule 22 (expr)


State 31

    3 lines: lines expr PLUS EQ . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 45


State 32

   11 expr: expr . PLUS expr
   11     | expr PLUS expr .
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    MOD   shift, and go to state 27
    MULT  shift, and go to state 28
    DIV   shift, and go to state 29

    $default  reduce using rule 11 (expr)


State 33

    4 lines: lines expr MINUS EQ . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 46


State 34

   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   12     | expr MINUS expr .
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    MOD   shift, and go to state 27
    MULT  shift, and go to state 28
    DIV   shift, and go to state 29

    $default  reduce using rule 12 (expr)


State 35

    7 lines: lines expr MOD EQ . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 47


State 36

   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   16     | expr MOD expr .
   17     | expr . MULT MULT expr

    MULT  shift, and go to state 28
    DIV   shift, and go to state 29

    $default  reduce using rule 16 (expr)


State 37

    5 lines: lines expr MULT EQ . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 48


State 38

   17 expr: expr MULT MULT . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 49


State 39

   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   13     | expr MULT expr .
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    $default  reduce using rule 13 (expr)


State 40

    6 lines: lines expr DIV EQ . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 50


State 41

    8 lines: lines expr DIV DIV . EQ expr
   15 expr: expr DIV DIV . expr

    EQ     shift, and go to state 51
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 52


State 42

   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   14     | expr DIV expr .
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    $default  reduce using rule 14 (expr)


State 43

    2 lines: lines IDENT EQ expr CR .

    $default  reduce using rule 2 (lines)


State 44

   15 expr: expr DIV DIV . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 52


State 45

    3 lines: lines expr PLUS EQ expr .
   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MOD    shift, and go to state 27
    MULT   shift, and go to state 28
    DIV    shift, and go to state 29

    PLUS      [reduce using rule 3 (lines)]
    MINUS     [reduce using rule 3 (lines)]
    $default  reduce using rule 3 (lines)


State 46

    4 lines: lines expr MINUS EQ expr .
   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MOD    shift, and go to state 27
    MULT   shift, and go to state 28
    DIV    shift, and go to state 29

    PLUS      [reduce using rule 4 (lines)]
    MINUS     [reduce using rule 4 (lines)]
    $default  reduce using rule 4 (lines)


State 47

    7 lines: lines expr MOD EQ expr .
   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MOD    shift, and go to state 27
    MULT   shift, and go to state 28
    DIV    shift, and go to state 29

    PLUS      [reduce using rule 7 (lines)]
    MINUS     [reduce using rule 7 (lines)]
    $default  reduce using rule 7 (lines)


State 48

    5 lines: lines expr MULT EQ expr .
   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MOD    shift, and go to state 27
    MULT   shift, and go to state 28
    DIV    shift, and go to state 29

    PLUS      [reduce using rule 5 (lines)]
    MINUS     [reduce using rule 5 (lines)]
    $default  reduce using rule 5 (lines)


State 49

   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr
   17     | expr MULT MULT expr .

    $default  reduce using rule 17 (expr)


State 50

    6 lines: lines expr DIV EQ expr .
   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MOD    shift, and go to state 27
    MULT   shift, and go to state 28
    DIV    shift, and go to state 29

    PLUS      [reduce using rule 6 (lines)]
    MINUS     [reduce using rule 6 (lines)]
    $default  reduce using rule 6 (lines)


State 51

    8 lines: lines expr DIV DIV EQ . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8
    LPAR   shift, and go to state 9

    expr  go to state 53


State 52

   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   15     | expr DIV DIV expr .
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    $default  reduce using rule 15 (expr)


State 53

    8 lines: lines expr DIV DIV EQ expr .
   11 expr: expr . PLUS expr
   12     | expr . MINUS expr
   13     | expr . MULT expr
   14     | expr . DIV expr
   15     | expr . DIV DIV expr
   16     | expr . MOD expr
   17     | expr . MULT MULT expr

    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MOD    shift, and go to state 27
    MULT   shift, and go to state 28
    DIV    shift, and go to state 29

    PLUS      [reduce using rule 8 (lines)]
    MINUS     [reduce using rule 8 (lines)]
    $default  reduce using rule 8 (lines)
